# polycirc

./: README.md  pyproject.toml
docs/source/: api_reference.rst  conf.py  index.rst  refs.bib  usage.rst  user_guide.rst
examples/: iris.py  leo.py  util.py
polycirc/: __init__.py  ast.py  decompose.py  ir.py  learner.py  operation.py  optic.py  permutation.py  serialize.py
tests/: data.py  generators.py  operations_list.py  test_ast.py  test_decompose.py  test_docs.py  test_ir.py  test_learner.py  test_operations.py  test_optic.py  test_serialize.py
